# stunseed

./: Cargo.toml  LICENSE  README.md
benchmark/: Cargo.toml
benchmark/benches/: all.rs  teams.rs
benchmark/src/: askama_bench.rs  lib.rs  stunseed_bench.rs
benchmark/templates/: big-table.html  teams.html
generator/: generate_elements.py  generate_global_attributes.py  generator.py
src/: ast.rs  attributes.rs  elements.rs  html.rs  lib.rs  utils.rs
src/attributes/: attribute_types.rs
stunseed/: Cargo.toml
stunseed-derive/: Cargo.toml
stunseed-derive/src/: lib.rs
stunseed/generator/: generate_elements.py  generate_global_attributes.py
stunseed/src/: ast.rs  attributes.rs  elements.rs  html.rs  lib.rs  utils.rs
stunseed/src/elements/: builder.rs  concat_children.rs  constify.rs  custom_element.rs  fragment.rs  include_html.rs  text.rs
stunseed/src/utils/: html_builder.rs
