[package]
name = "stunseed"
version = "0.1.0"
authors = ["tropicbliss <tropicbliss@protonmail.com>"]
categories = ["gui"]
description = "An ergonomic HTML builder"
edition = "2021"
keywords = ["html"]
license = "MIT"
repository = "https://github.com/tropicbliss/stunseed"

[dependencies]
ammonia = "4.0"
dyn-clone = "1.0"
paste = "1.0"
smartstring = "1.0"
stacker = "0.1"
strum = "0.26"
strum_macros = "0.26"
