[package]
name = "stunseed"
version = "0.1.0"
authors = ["tropicbliss <tropicbliss@protonmail.com>"]
categories = ["gui"]
description = "An ergonomic HTML builder"
edition = "2021"
keywords = ["html"]
license = "MIT"
repository = "https://github.com/tropicbliss/stunseed"
rust-version = "1.70"

[dependencies]
ammonia = "4.0"
dyn-clone = "1.0"
itoa = "1.0"
ryu = "1.0"
stacker = "0.1"
stunseed-derive = { path = "../stunseed-derive", version = "0.1.0" }
